# Sophos-LLM-Builder-Toolkit

./: README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  build_push_image.sh
src/: configs  create_dataset.py  launch.py  launch.sh
src/scripts/: dpo_train.py  inference.py  no_trainer_accelerate.py  no_trainer_accelerate_l2.py  orpo_train.py  requirements.txt  run_clm_no_trainer_trojan.py  sagemaker_entrypoint.py  sft_train.py  train.py  unified_train.py
src/scripts/configs/: ds_z2_fp16.json  ds_z2_no_offload_trojan.json  ds_z2_trojan.json  ds_z3_fp16.json  ds_z3_no_cpu_offload_fp16.json
src/scripts/trojan_resources/: data.json  targets_test_phase.txt  trojan_specifications1k_final_1b.pt  trojan_specifications1k_final_7b.pt
src/scripts/utils/: data_args.py  data_processing.py  inference_utils.py  model_wrapper.py  training_utils.py  trojan_utils.py
